Fix search dropdown z-index

--- a/frontend/src/Common/Searchbar/Searchbar.scss
+++ b/frontend/src/Common/Searchbar/Searchbar.scss
@@ -3,7 +3,7 @@
 
 searchbar {
   position: relative;
-  z-index: 200;
+  z-index: 2000;
   display: block;
   padding: 30px 0;
   padding-right: 100px;
